--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,8 +46,9 @@ label {
 }
 
 input {
+    width: 60%;
     padding: 12px;
-    border: 1px solid #555;  /* Adicionando uma borda suave aos inputs */
+    border: 1px solid #555;
     border-radius: 5px;
     font-size: 1rem;
     background-color: #3a3a3a;
@@ -68,13 +69,16 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
     margin-top: 10px;
 }
 
 button:hover {
     background-color: #45a049;
+    box-shadow: 0 0 5px #48ff48cc, 0 0 15px #48ff4880;
+    border: 1px solid #4CAF50;
 }
+
 
 #containerTeclado {
     background-color: black;
@@ -88,6 +92,7 @@ button:hover {
 
 #linhaDeNumeros, #linhaDeCima, #linhaDoMeio, #linhaDeBaixo {
     display: flex;
+    flex-wrap: wrap;  /* Permitir que as teclas "quebrem" linha em telas menores */
     justify-content: space-between;
     gap: 5px;
 }
@@ -100,6 +105,7 @@ input[type="button"] {
     flex: 1;
     border-radius: 5px;
     font-size: 1rem;
+    min-width: 40px; /* Largura mínima para as teclas não ficarem muito pequenas */
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
@@ -111,6 +117,7 @@ input[type="button"]:hover {
 
 @media (max-width: 768px) {
     main {
+        /* margin-top: 20%; */
         width: 100%;
         max-width: 100%;
     }
@@ -118,6 +125,11 @@ input[type="button"]:hover {
     input {
         height: 35px;
         font-size: 0.9rem;
+    }
+
+    input[type="button"] {
+        font-size: 0.8rem;
+        padding: 8px;
     }
 }
 
