--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,7 +46,7 @@ label {
 }
 
 input {
-    width: 60%;
+    width: 80%;
     padding: 12px;
     border: 1px solid #555;
     border-radius: 5px;
@@ -115,11 +115,11 @@ input[type="button"]:hover {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
     main {
         /* margin-top: 20%; */
         width: 100%;
-        max-width: 100%;
+        max-width: 600px;
     }
 
     input {
@@ -133,7 +133,7 @@ input[type="button"]:hover {
     }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 801px) {
     input {
         height: 50px;
         font-size: 1.2rem;
