--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,7 @@ main {
     background-color: #2d2d2d;
     border-radius: 10px;
     width: 90%;
-    max-width: 600px;  /* Dimensão ajustada para um formulário mais compacto */
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -29,7 +29,7 @@ main {
 form {
     display: flex;
     flex-direction: column;
-    gap: 15px;  /* Aumentando o espaçamento entre os campos */
+    gap: 15px;
     margin-bottom: 20px;
 }
 
@@ -41,7 +41,7 @@ h2 {
 }
 
 label {
-    color: #ccc;  /* Suavizando a cor dos labels */
+    color: #ccc;
     font-size: 0.9rem;
 }
 
@@ -92,7 +92,7 @@ button:hover {
 
 #linhaDeNumeros, #linhaDeCima, #linhaDoMeio, #linhaDeBaixo {
     display: flex;
-    flex-wrap: wrap;  /* Permitir que as teclas "quebrem" linha em telas menores */
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: 5px;
 }
@@ -105,7 +105,7 @@ input[type="button"] {
     flex: 1;
     border-radius: 5px;
     font-size: 1rem;
-    min-width: 40px; /* Largura mínima para as teclas não ficarem muito pequenas */
+    min-width: 40px;
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
@@ -117,7 +117,6 @@ input[type="button"]:hover {
 
 @media (max-width: 800px) {
     main {
-        /* margin-top: 20%; */
         width: 100%;
         max-width: 600px;
     }
